@@ -16,4 +16,6 @@ void scroll_to_cursor ();
 
 gchar *handle_apl_characters (gsize *bw_p, GdkEventKey *key_event);
 
+void set_status_visibility (gboolean show);
+
 #endif
