@@ -1,5 +1,7 @@
 2014-09-12  Chris Moller  <moller@mollerware.com>
 
+	* menu.c (ps_toggle_cb): Added a toggle for the pstat line.
+
 	* aplio.c (apl_read_sockid): forced a null-term in call-back.
 
 2014-09-11  Chris Moller  <moller@mollerware.com>
